Fix button not showing up

--- a/hello/flashcardsFiles/lango.css
+++ b/hello/flashcardsFiles/lango.css
@@ -1,12 +1,18 @@
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+html {
+  height:100%;
 }
 
-#root {
+body {
   min-height:100%;
+  padding:0;
+  margin:0;
   position:relative;
+}
+
+body::after{
+  content:'';
+  display:block;
+  height:100px;
 }
 
 #logo {
@@ -85,7 +91,7 @@ p:empty:not(:focus)::before {
   font-size: 35px;
 }
 
-footer {
+footer{
   background-color: #606a9b;
   font-family: Helvetica;
   font-size: 25pt;
@@ -93,11 +99,11 @@ footer {
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
-  width: 100%;
-  position: absolute;
+  position:absolute;
   bottom: 0;
+  width: 100%;
+  height: 40px;
 }
-
 
 /* Phone View */
 @media only screen and (max-width: 600px) {
@@ -140,6 +146,7 @@ footer {
   }
   footer {
     font-size: 17pt;
+    height: 30px;
   }
 }
 
@@ -176,15 +183,4 @@ and (max-device-width : 1366px)  {
   #save-button {
     margin-left: 685px;
   }
-}
-
-/* Adds scalability for desktop */
-html {
-    transform: scale(1);
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
-    width: 100%;
-    height: 125%;
 }
